# MolDF

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  publish_to_pypi.yml  tests.yml
assets/: covalent_radii.csv
docs/: api.rst  conf.py  index.rst  install.rst  modules.rst  pdbx2df.rst  requirements.txt  usage.rst
moldf/: __init__.py  common.py  constants.py  covalent_bond.py  pdb_dataframe.py  read_jcsv.py  read_mol2.py  read_pdb.py  read_pdbx.py  split_line.py  write_jcsv.py  write_mol2.py  write_pdb.py  write_pdbx.py
moldf/covalent_bonds/: ALA.cif  ARG.cif  ASN.cif  ASP.cif  CYS.cif  GLN.cif  GLU.cif  GLY.cif  HIS.cif  ILE.cif  LEU.cif  LYS.cif  MET.cif  PHE.cif  PRO.cif  PYL.cif  SEC.cif  SER.cif  THR.cif  TRP.cif  TYR.cif  VAL.cif  covalent_radii.csv
pdbx2df/: __init__.py  constants.py  pdb_dataframe.py  read_mol2.py  read_pdb.py  read_pdbx.py  split_line.py  write_mol2.py  write_pdb.py  write_pdbx.py
tests/: conftest.py  moldf_output.jcsv  test_covalent_bond.py  test_pdb_dataframe.py  test_read_jcsv.py  test_read_mol2.py  test_read_pdb.py  test_read_pdbx.py  test_split_line.py  test_write_jcsv.py  test_write_mol2.py  test_write_pdb.py  test_write_pdbx.py
tests/test_files/: 1G03.csv  1VII.cif  1VII_moldf.cif  1VII_pdbx2df.cif  1VII_test.cif  5K9I.csv  5K9I.pkl  glutathione.mol2  mol2_moldf_nt.jcsv  pdb_moldf.jcsv  pdb_moldf_nt.jcsv  (+5 more)
